--- a/style.css
+++ b/style.css
@@ -65,6 +65,22 @@ section {
     background-color: #99ff99; /* Light green */
 }
 
+.tutorial:nth-child(4) {
+    background-color: #268d5d; /* Light green */
+}
+.tutorial:nth-child(5) {
+    background-color: #787bad; /* Light green */
+}
+.tutorial:nth-child(6) {
+    background-color: #888f88; /* Light green */
+}
+.tutorial:nth-child(7) {
+    background-color: #99ff99; /* Light green */
+}
+.tutorial:nth-child(8) {
+    background-color: #c7ab4e; /* Light green */
+}
+
 
 .tutorial {
     background-color: #f4f4f4;
