comments added to css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 /* Reset some default styles */
+/**kjrjngjntgjntjgn
+
+gjnjngjgn
+lkmgtgn
+jttigntng
+**/
 html, body {
     margin: 0;
     padding: 0;
