comment added to check the pull request in the client

--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 /* Reset some default styles */
+
+/**
+
+this is a comment line for checkin the pull request
+
+**/
+
 html, body {
     margin: 0;
     padding: 0;
