--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-/* Reset some default styles */
-/**kjrjngjntgjntjgn
-
-gjnjngjgn
-lkmgtgn
-jttigntng
-**/
+/**this is a comment**/
 html, body {
     margin: 0;
     padding: 0;
