comment added from client test branch

--- a/style.css
+++ b/style.css
@@ -1,11 +1,4 @@
-/* Reset some default styles */
-
-/**
-
-this is a comment line for checkin the pull request
-
-**/
-
+/**this is a new comment from client test branch**/
 html, body {
     margin: 0;
     padding: 0;
